@@ -50,20 +50,21 @@ init_startup_state (GladeXML *dialog)
 		gtk_widget_hide (WID ("at_applications_warning_label"));
 		gtk_widget_hide (WID ("at_applications_hseparator"));
 	} else {
+		gchar *warning_label;
+
 		gtk_widget_show (WID ("at_applications_warning_label"));
 		gtk_widget_show (WID ("at_applications_hseparator"));
 		if (!at_startup_state.enabled.osk_installed &&
 		    !(at_startup_state.enabled.screenreader_installed ||
 		      at_startup_state.enabled.magnifier_installed)) {
-			gtk_label_set_markup (GTK_LABEL (WID ("at_applications_warning_label")),
-					      _("<i>No Assistive Technology is available on your system.  The 'gok' package must be installed in order to get on-screen keyboard support, and the 'gnopernicus' package must be installed for screenreading and magnifying capabilities.</i>"));
+			warning_label = g_strdup_printf ("<i>%s</i>", _("No Assistive Technology is available on your system.  The 'gok' package must be installed in order to get on-screen keyboard support, and the 'gnopernicus' package must be installed for screenreading and magnifying capabilities."));
 		} else if (!at_startup_state.enabled.osk_installed) {
-			gtk_label_set_markup (GTK_LABEL (WID ("at_applications_warning_label")),
-					      _("<i>Not all available assistive technologies are installed on your system.  The 'gok' package must be installed in order to get on-screen keyboard support.</i>"));
+			warning_label = g_strdup_printf ("<i>%s</i>", _("Not all available assistive technologies are installed on your system.  The 'gok' package must be installed in order to get on-screen keyboard support."));
 		} else {
-			gtk_label_set_markup (GTK_LABEL (WID ("at_applications_warning_label")),
-					      _("<i>Not all available assistive technologies are installed on your system.  The 'gnopernicus' package must be installed for screenreading and magnifying capabilities.</i>"));
+			warning_label = g_strdup_printf ("<i>%s</i>", _("Not all available assistive technologies are installed on your system.  The 'gnopernicus' package must be installed for screenreading and magnifying capabilities."));
 		}
+		gtk_label_set_markup (GTK_LABEL (WID ("at_applications_warning_label")), warning_label);
+		g_free (warning_label);
 	}
 }
 
