@@ -1,3 +1,8 @@
+Fri Aug  1 14:28:52 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* main.c (init_startup_state): remove markup tags from translated
+	strings, #118801.
+
 2003-07-18  Jonathan Blandford  <jrb@gnome.org>
 
 	* main.c: Add a check to confirm that the AT's are installed.  Add
